Fix: Se  corrige  error de accesibilidad por contraste de color de botones #d04614

--- a/Web/src/app/empresa/ver-proyectos/ver-proyectos.component.css
+++ b/Web/src/app/empresa/ver-proyectos/ver-proyectos.component.css
@@ -7,12 +7,13 @@
 }
 
 .btn_ {
-    background-color: #E25928; /* Color de fondo azul (puedes cambiar el valor a tu preferencia) */
-    color: #fff; /* Color del texto blanco (puedes cambiar el valor si lo deseas) */
+    background-color: #d04614; /* Color de fondo azul (puedes cambiar el valor a tu preferencia) */
+    color: #ffffff; /* Color del texto blanco (puedes cambiar el valor si lo deseas) */
     border: none; /* Quita el borde del botón */
     padding: 5px 20px; /* Ajusta el relleno del botón según tus necesidades */
     border-radius: 10px; /* Añade bordes redondeados (puedes ajustar el radio según tu preferencia) */
 
+  
 }
 
 .custom-list-group{
